# TTT4270

./: .gitignore  CMakeLists.txt  README.md  SPS  makefile
FPGA/: clockInfo.txt  compile.sh  flash.sh  flash.tcl  synth.tcl  test.sh  waveform.vcd
FPGA/.Xil/: top_propImpl.xdc
FPGA/include/: timer_board-constraints.pcf  timer_board-constraints.xdc
FPGA/src/: CounterModule.sv  DataCombiner.sv  UART.sv  UARTBuffer.sv  top.sv  uart_rx.sv
FPGA/tb/: conf.gtkw  sim.out  top_tb.sv  uart_tb.sv
PlatformIO_Code/Bioskop/src/: Barometer.cpp  Servomotor.cpp  main.cpp
PlatformIO_Code/Sonar_TX/src/: main.cpp
debug/: CMakeCache.txt  Makefile  TTT4270_SPS  cmake_install.cmake
include/: SPS.h  gui.h
modelTesting/: modelTest.py  models.py
src/: SPS.cpp  gui.cpp  main.cpp
